--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ function drawTree() {
     KEYSTONE: new Image()
     };
 
-    images.SMALL.src = "./images/small_node.png";
-    images.NOTABLE.src = "./images/notable_node.png";
-    images.KEYSTONE.src = "./images/keystone_node.png";
+    images.SMALL.src = "/lastopus-passive-tree/images/small_node.png";
+    images.NOTABLE.src = "/lastopus-passive-tree/images/notable_node.png";
+    images.KEYSTONE.src = "/lastopus-passive-tree/images/keystone_node.png";
 
     const imageSizes = {
     SMALL: 40,
