--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@ fetch('passives.json')
     .then(data => {
         nodes = data;
         drawTree();
+        renderNodes();
     });
 </script>
 
