--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ let scale = 1.0;   // การซูม
 let isDragging = false;
 let dragStartX = 0;
 let dragStartY = 0;
+let lastTouchX = 0;
+let lastTouchY = 0;
         // วาดโหนด
 const images = {
 SMALL: new Image(),
@@ -155,7 +157,7 @@ canvas.addEventListener('click', (e) => {
         const dx = node.x - toReduceX - clickX;
         const dy = node.y - toReduceY - clickY;
         const distance = Math.sqrt(dx * dx + dy * dy);
-        if (distance <= 20) {
+        if (distance <= 100) {
             selectedNode = node;
             break;
         }
@@ -205,6 +207,70 @@ canvas.addEventListener('wheel', (e) => {
     offsetY = e.offsetY - mouseY * scale;
 
     drawTree();
+});
+
+    canvas.addEventListener('touchstart', (e) => {
+    if (e.touches.length === 1) {
+        isDragging = true;
+        lastTouchX = e.touches[0].clientX;
+        lastTouchY = e.touches[0].clientY;
+    }
+}, { passive: false });
+
+canvas.addEventListener('touchmove', (e) => {
+    if (isDragging && e.touches.length === 1) {
+        const touchX = e.touches[0].clientX;
+        const touchY = e.touches[0].clientY;
+
+        offsetX += touchX - lastTouchX;
+        offsetY += touchY - lastTouchY;
+
+        lastTouchX = touchX;
+        lastTouchY = touchY;
+
+        drawTree();
+    }
+}, { passive: false });
+
+canvas.addEventListener('touchend', (e) => {
+    isDragging = false;
+});
+
+    function getTouchDistance(touches) {
+    const dx = touches[0].clientX - touches[1].clientX;
+    const dy = touches[0].clientY - touches[1].clientY;
+    return Math.sqrt(dx * dx + dy * dy);
+}
+
+canvas.addEventListener('touchmove', (e) => {
+    if (e.touches.length === 2) {
+        e.preventDefault();
+        const newDistance = getTouchDistance(e.touches);
+
+        if (lastTouchDistance) {
+            const delta = newDistance - lastTouchDistance;
+            const zoomFactor = 1.01;
+            const zoom = delta > 0 ? zoomFactor : 1 / zoomFactor;
+
+            const rect = canvas.getBoundingClientRect();
+            const midX = (e.touches[0].clientX + e.touches[1].clientX) / 2 - rect.left;
+            const midY = (e.touches[0].clientY + e.touches[1].clientY) / 2 - rect.top;
+            const worldX = (midX - offsetX) / scale;
+            const worldY = (midY - offsetY) / scale;
+
+            scale *= zoom;
+            offsetX = midX - worldX * scale;
+            offsetY = midY - worldY * scale;
+
+            drawTree();
+        }
+
+        lastTouchDistance = newDistance;
+    }
+}, { passive: false });
+
+canvas.addEventListener('touchend', (e) => {
+    lastTouchDistance = 0;
 });
 
 fetch('passives.json')
